--- a/Core/Template/res/css/loader_icon.css
+++ b/Core/Template/res/css/loader_icon.css
@@ -12,18 +12,18 @@
 	position: absolute;
 	left: 50%;
 	top:50%;
-	width:3.5em;
-	height:3.5em;
+	width:2.5em;
+	height:2.5em;
 	content:"";
-	border-top:1.2em solid rgb(0,0,0,0.2);
-	border-right:1.2em solid rgb(0,0,0,0.2);
-	border-bottom:1.2em solid rgb(0,0,0,0.2);
-	border-left:1.2em solid #2695f3;
+	border-top:1.1em solid rgb(0,0,0,0.2);
+	border-right:1.1em solid rgb(0,0,0,0.2);
+	border-bottom:1.1em solid rgb(0,0,0,0.2);
+	border-left:1.1em solid gray;	/* #2695f3;*/
 	-webkit-transform: translateZ(0);
 	-ms-transform: translateZ(0);
 	transform: translateZ(0);
-	-webkit-animation: load8 0.8s infinite linear;
-	animation: load8 0.8s infinite linear;
+	-webkit-animation: load8 0.6s infinite linear;
+	animation: load8 0.6s infinite linear;
 	border-radius: 50%;
 }
 @-webkit-keyframes load8 {
