--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -111,3 +111,38 @@ ul.input-list>li>label>input {
 .menu-container {
 	display:none;
 }
+/* ファイル送信ラベル */
+.file-label {
+	display:flex;
+	white-space: nowrap;
+	align-items: center;
+    vertical-align: middle;
+	border: 1px solid skyblue;
+	padding:0;
+	font-size:10pt;
+}
+.file-label>input[type="file"] {
+	display: none;
+}
+.file-label>input[type="text"] {
+	display: inline-block;
+	width:100%;
+	height:22px;
+	background-color:#ffffe4;
+	border:none;
+}
+.file-label>span {
+	position:relative;
+	display: inline-block;
+	width:96px;
+	height:22px;
+	text-align:center;
+	padding-left:18px;
+	cursor: pointer;
+color:white;
+	background: url(res/img/fplder-icon.png) no-repeat left top;
+}
+.file-label>span:hover {
+	color:yellow;
+	background: url(res/img/fplder-icon.png) no-repeat left -22px;
+}
