--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -3,7 +3,7 @@
 バルーンヘルプ表示CSS
 */
 .balloon-BK,.popup-BK {
-    z-index:100;
+    z-index:90000;
     display:none;
     position:fixed;
     top:0;
@@ -18,7 +18,7 @@ opacity: 0.25; */
 .balloon-BK:not(:target) {height:100%\9} /* IE9,10 */
 /*    ポップアップ吹き出し */
 .popup-balloon {
-    z-index:101;
+    z-index:90001;
     position:fixed;
     top:0;
     left:0;
@@ -33,12 +33,12 @@ opacity: 0.25; */
 }
 /*    マルチタイプポップアップ吹き出し */
 .multi-balloon {
+    z-index:90001;
 	position: fixed;
-	top:0;
-	left:0;
+	top:-10;
+	left:-10;
 	width:0;
 	height:0;
-    z-index:101;
 }
 .multi-balloon>div {
     display:none;
@@ -201,7 +201,7 @@ opacity: 0.25; */
     ポップアップボックス
 */
 .popup-box {
-    z-index:999;
+    z-index:90001;
     position:fixed;
     display:none;
     padding:10px;
@@ -305,7 +305,7 @@ opacity: 0.25; */
 インフォボックス
 */
 .info-box {
-    z-index:2;
+    z-index:90002;
     position:fixed;
     display:none;
     min-width:100px;
@@ -324,7 +324,7 @@ opacity: 0.25; */
     ダイアログボックス
 */
 .dialog-box {
-    z-index:2;
+    z-index:90002;
     position:fixed;
     display:none;
     min-width:200px;
@@ -404,18 +404,40 @@ opacity: 0.25; */
     ポップアップナビメニュー
 */
 .navi-menubox {
+    z-index: 90001;
     position:fixed;
     display:none;
-    z-index: 101;
 	font-size:10pt;
+}
+.navi-menubox>ul {
+	border: 2px solid gray;
+	border-radius: 5px;
+	box-shadow: 2px 4px 4px silver;
 }
 .navi-menubox ul>li {
     list-style-type: none;
     line-height: 30px;
     width:15em;
     margin-top:-1px;
-    margin-left:-1px;
 	white-space: nowrap;
+}
+/* 最初の展開メニューだけずらす */
+.navi-menubox>ul>li>.navi-sub {
+	margin-left:2px;
+}
+.navi-menubox li .navi-sub {
+    z-index:1;
+    display:none;
+    left:100%;
+    position:absolute;
+    margin-top:-31px;	/* line-height分上に移動 */
+}
+.navi-menubox li:hover > .navi-sub {
+    display:flex;
+}
+/* サブメニューの枠線を隣に重ねる */
+.navi-menubox .navi-sub ul {
+	margin-left: -1px;
 }
 /* サブメニューの幅 */
 .navi-menubox .navi-sub li {
@@ -436,25 +458,12 @@ opacity: 0.25; */
 	white-space: nowrap;
 	overflow: hidden;
 }
-.navi-menubox li .navi-sub {
-    z-index:1;
-    display:none;
-    left:100%;
-    position:absolute;
-    margin-left:1px;	/* border幅分ずらす */
-	margin-top:-30px;	/* line-height分上に移動 */
-}
-.navi-menubox li:hover > .navi-sub {
-    display:flex;
-}
-.navi-menubox li a {
+.navi-menubox li> a {
 	border:1px solid gray;
     background: whitesmoke;
     display: block;
     text-align: center;
     text-decoration: none;
-    width: 100%;
-    height: 100%;
     cursor:pointer;
 	white-space: nowrap;
 	overflow: hidden;
@@ -464,7 +473,7 @@ opacity: 0.25; */
     color:black;
 }
 /* リストに「▶」を付ける*/
-.navi-menubox li a.label:after {
+.navi-menubox li>a.label:after {
     position: absolute;
     right: 0px;
     margin-top: 1rem;
@@ -477,12 +486,12 @@ opacity: 0.25; */
     ポップアップナビメニュー
 */
 .navi-checklist {
+    z-index: 90001;
     position:fixed;
     display:none;
-    z-index: 111;
 	font-size:10pt;
 	background-color:white;
-	box-shadow: 1px 1px 2px gray;
+	box-shadow: 2px 2px 4px gray;
 	border:2px solid black;
 	border-radius:5px;
 	background-color: #f5fbfe;
@@ -605,13 +614,15 @@ opacity: 0.25; */
 /* テキストとチェックボックスの位置揃え */
 .dropdown-menu>textarea,
 .dropdown-menu>input {
+	margin:0;
 	padding: 0 5px;
 	width:100%;
-	height:100%;
 	background-color: #e9f4fb;
 	border: none;
 	vertical-align:middle;
 }
+.dropdown-menu>textarea {height:100%;}
+.dropdown-menu>input {height:1.5em;}
 /* タイトル用 */
 .dropdown-menu>div{
 	padding: 0 5px;
