--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -423,7 +423,7 @@ opacity: 0.25; */
 }
 /* 最初の展開メニューだけずらす */
 .navi-menubox>ul>li>.navi-sub {
-	margin-left:2px;
+	margin-left:-1px;
 }
 .navi-menubox li .navi-sub {
     z-index:1;
@@ -582,11 +582,11 @@ opacity: 0.25; */
 	right:0;
 	width: 0;
 	height: 0;
-	/* margin: 8px 2px 0px 2px; */
-	margin-top: 6px;
+	margin-top: 4px;
 	cursor: pointer;
 	border: 6px solid transparent;
 	border-top: 13px solid #aaa;
+	border-bottom:none;
 }
 /* シルバー背景でも見えるようにする */
 .dropdown-menu.normal>span.arrow {
