--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -564,7 +564,7 @@ opacity: 0.25; */
 	white-space: nowrap;
 	align-items: center;
     vertical-align: middle;
-	border: 1px solid skyblue;
+	/* border: 1px solid skyblue; */
 	padding:0;
 	font-size:10pt;
 }
@@ -573,7 +573,7 @@ opacity: 0.25; */
 	width: 100%;
 	color: inherit;
 	background-color: inherit;
-	border: none;
+	/* border: none; */
 }
 /* リストに「▼」を付ける */
 .dropdown-menu>span.arrow {
@@ -582,10 +582,10 @@ opacity: 0.25; */
 	right:0;
 	width: 0;
 	height: 0;
-	margin-top: 4px;
+	margin-top: 2px;
 	cursor: pointer;
 	border: 6px solid transparent;
-	border-top: 13px solid #aaa;
+	border-top: 12px solid #aaa;
 	border-bottom:none;
 }
 /* シルバー背景でも見えるようにする */
@@ -603,6 +603,7 @@ opacity: 0.25; */
     cursor: pointer;
 	width:19px;
 	height:15px;
+	margin-top:2px;
 	background: url(res/img/clear_btn.png) no-repeat left top;
 	border-right: 1px dotted gray;
 }
@@ -617,12 +618,11 @@ opacity: 0.25; */
 	margin:0;
 	padding: 0 5px;
 	width:100%;
+	height:100%;
 	background-color: #e9f4fb;
 	border: none;
 	vertical-align:middle;
 }
-.dropdown-menu>textarea {height:100%;}
-.dropdown-menu>input {height:1.5em;}
 /* タイトル用 */
 .dropdown-menu>div{
 	padding: 0 5px;
