--- a/Core/Template/res/css/checklist.css
+++ b/Core/Template/res/css/checklist.css
@@ -1,6 +1,6 @@
 
 .dialog-BK {
-    z-index:100;
+    z-index:90000;
     position:fixed;
     display:none;
     top:0;
@@ -133,6 +133,14 @@
 	padding-left: 5px;
 	background-color: silver;
 	border:1px solid gray;
+}
+.popup-checklist span.dropdown:after {
+	position:relative;
+	top:0.5em;
+    right: 7px;
+	border:5px solid transparent;
+	border-top:8px solid gray;
+	content:"";
 }
 .popup-checklist span.dropdown {
 	position:absolute;
