--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -2,8 +2,8 @@
 ===============================================================================
 バルーンヘルプ表示CSS
 */
-.baloon-BK,.popup-BK {
-    z-index:100;
+.balloon-BK,.popup-BK {
+    z-index:90000;
     display:none;
     position:fixed;
     top:0;
@@ -15,24 +15,47 @@
 /* background-color: black;
 opacity: 0.25; */
 }
-.baloon-BK:not(:target) {height:100%\9} /* IE9,10 */
+.balloon-BK:not(:target) {height:100%\9} /* IE9,10 */
 /*    ポップアップ吹き出し */
-.popup-baloon {
-    z-index:101;
+.popup-balloon {
+    z-index:90001;
     position:fixed;
     top:0;
     left:0;
     display:none;
-    margin-top: 16px;
     padding: 10px;
+	margin:0;
     font-size:10pt;
     border: 2px solid #999;
     border-radius:12px;
     color:#333;
     background: lightyellow;
 }
+/*    マルチタイプポップアップ吹き出し */
+.multi-balloon {
+    z-index:90001;
+	position: fixed;
+	top:-10;
+	left:-10;
+	width:0;
+	height:0;
+}
+.multi-balloon>div {
+    display:none;
+}
+/* スイッチバルーンのコンテナスタイル */
+.multi-balloon>div.container {
+    display:block;
+	width:0;
+	height:0;
+}
+/* スイッチバルーン要素は非表示 */
+.multi-balloon>div.container>div {
+    display:none;
+}
 /* 上中央フキダシ部分を作成 */
-.baloon-top-center:before {
+.balloon-top-center { margin-top: 12px; }
+.balloon-top-center:before {
     content: "";
     position: absolute;
     top:-20px;
@@ -40,7 +63,7 @@ opacity: 0.25; */
     border: 8px solid transparent;
     border-bottom: 12px solid #999;
 }
-.baloon-top-center:after {
+.balloon-top-center:after {
     content: "";
     position: absolute;
     top:-17px;
@@ -49,7 +72,8 @@ opacity: 0.25; */
     border-bottom: 12px solid lightyellow;
 }
 /* 左上フキダシ部分を作成 */
-.baloon-top-left:before {
+.balloon-top-left { margin-top: 13px; margin-left:-4px; }
+.balloon-top-left:before {
     content: "";
     position: absolute;
     top:-13px;
@@ -57,7 +81,7 @@ opacity: 0.25; */
     border-top: 13px solid transparent;
     border-left: 18px solid #999;
 }
-.baloon-top-left:after {
+.balloon-top-left:after {
     content: "";
     position: absolute;
     top:-9px;
@@ -66,15 +90,16 @@ opacity: 0.25; */
     border-left: 18px solid lightyellow;
 }
 /* 右上フキダシ部分を作成 */
-.baloon-top-right:before {
+.balloon-top-right { margin-top: 13px; margin-right:-4px; }
+.balloon-top-right:before {
     content: "";
     position: absolute;
     top:-13px;
     right:4px;
-    border-top: 12px solid transparent;
+    border-top: 13px solid transparent;
     border-right: 18px solid #999;
 }
-.baloon-top-right:after {
+.balloon-top-right:after {
     content: "";
     position: absolute;
     top:-9px;
@@ -83,24 +108,26 @@ opacity: 0.25; */
     border-right: 18px solid lightyellow;
 }
 /* 下中央フキダシ部分を作成 */
-.baloon-bottom-center:before {
+.balloon-bottom-center { margin-bottom: 12px;}
+.balloon-bottom-center:before {
     content: "";
     position: absolute;
     bottom:-20px;
-    left:47%;
+    left:calc(50% - 8px);
     border: 8px solid transparent;
     border-top: 12px solid #999;
 }
-.baloon-bottom-center:after {
+.balloon-bottom-center:after {
     content: "";
     position: absolute;
     bottom:-17px;
-    left:47%;
+    left:calc(50% - 8px);
     border: 8px solid transparent;
     border-top: 12px solid lightyellow;
 }
 /* 左下フキダシ部分を作成 */
-.baloon-bottom-left:before {
+.balloon-bottom-left { margin-bottom: 13px; margin-left:-4px; }
+.balloon-bottom-left:before {
     content: "";
     position: absolute;
     bottom:-13px;
@@ -108,7 +135,7 @@ opacity: 0.25; */
     border-bottom: 13px solid transparent;
     border-left: 18px solid #999;
 }
-.baloon-bottom-left:after {
+.balloon-bottom-left:after {
     content: "";
     position: absolute;
     bottom:-9px;
@@ -117,7 +144,8 @@ opacity: 0.25; */
     border-left: 18px solid lightyellow;
 }
 /* 右フキダシ部分を作成 */
-.baloon-bottom-right:before {
+.balloon-bottom-right { margin-bottom: 13px; margin-right:-4px; }
+.balloon-bottom-right:before {
     content: "";
     position: absolute;
     bottom:-13px;
@@ -125,7 +153,7 @@ opacity: 0.25; */
     border-bottom: 12px solid transparent;
     border-right: 18px solid #999;
 }
-.baloon-bottom-right:after {
+.balloon-bottom-right:after {
     content: "";
     position: absolute;
     bottom:-9px;
@@ -134,7 +162,8 @@ opacity: 0.25; */
     border-right: 18px solid lightyellow;
 }
 /* 左フキダシ部分を作成 */
-.baloon-left:before {
+.balloon-left { margin-left: 12px;}
+.balloon-left:before {
     content: "";
     position: absolute;
     top:calc(50% - 8px);
@@ -142,7 +171,7 @@ opacity: 0.25; */
     border: 8px solid transparent;
     border-right: 12px solid #999;
 }
-.baloon-left:after {
+.balloon-left:after {
     content: "";
     position: absolute;
     top:calc(50% - 8px);
@@ -151,7 +180,8 @@ opacity: 0.25; */
     border-right: 12px solid lightyellow;
 }
 /* 右フキダシ部分を作成 */
-.baloon-right:before {
+.balloon-right { margin-right: 12px;}
+.balloon-right:before {
     content: "";
     position: absolute;
     top:calc(50% - 8px);
@@ -159,7 +189,7 @@ opacity: 0.25; */
     border: 8px solid transparent;
     border-left: 12px solid #999;
 }
-.baloon-right:after {
+.balloon-right:after {
     content: "";
     position: absolute;
     top:calc(50% - 8px);
@@ -171,7 +201,7 @@ opacity: 0.25; */
     ポップアップボックス
 */
 .popup-box {
-    z-index:999;
+    z-index:90001;
     position:fixed;
     display:none;
     padding:10px;
@@ -265,13 +295,17 @@ opacity: 0.25; */
 	display:inline-block;
     width:18px;
     height:19px;
-    background: url(res/img/help-icon.png) no-repeat left bottom;
+	vertical-align: middle;
+    background: url(res/img/help-icon.png) no-repeat left top;
+}
+.help_icon.active {
+    background: url(res/img/help-icon.png) no-repeat left -19px;
 }
 /*==============================================================================
 インフォボックス
 */
 .info-box {
-    z-index:2;
+    z-index:90002;
     position:fixed;
     display:none;
     min-width:100px;
@@ -290,7 +324,7 @@ opacity: 0.25; */
     ダイアログボックス
 */
 .dialog-box {
-    z-index:2;
+    z-index:90002;
     position:fixed;
     display:none;
     min-width:200px;
@@ -365,4 +399,235 @@ opacity: 0.25; */
 {
 	background: #aaa;  
 	padding: 6px 10px 4px;  
+}
+/*==============================================================================
+    ポップアップナビメニュー
+*/
+.navi-menubox {
+    z-index: 90001;
+    position:fixed;
+    display:none;
+	font-size:10pt;
+}
+.navi-menubox>ul {
+	border: 2px solid gray;
+	border-radius: 5px;
+	box-shadow: 2px 4px 4px silver;
+}
+.navi-menubox ul>li {
+    list-style-type: none;
+    line-height: 30px;
+    width:15em;
+    margin-top:-1px;
+	white-space: nowrap;
+}
+/* 最初の展開メニューだけずらす */
+.navi-menubox>ul>li>.navi-sub {
+	margin-left:-1px;
+}
+.navi-menubox li .navi-sub {
+    z-index:1;
+    display:none;
+    left:100%;
+    position:absolute;
+    margin-top:-31px;	/* line-height分上に移動 */
+}
+.navi-menubox li:hover > .navi-sub {
+    display:flex;
+}
+/* サブメニューの枠線を隣に重ねる */
+.navi-menubox .navi-sub ul {
+	margin-left: -1px;
+}
+/* サブメニューの幅 */
+.navi-menubox .navi-sub li {
+	width: 12em;
+}
+/* ラベル行は少し高さを抑える */
+.navi-menubox .navi-sub li.label {
+    line-height: 20px;
+}
+.navi-menubox li>span {
+	border:1px solid gray;
+    background: linear-gradient(to bottom, gray,black );
+    display: block;
+    color:white;
+    text-align: center;
+    width: 100%;
+    height: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.navi-menubox li> a {
+	border:1px solid gray;
+    background: whitesmoke;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    cursor:pointer;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.navi-menubox li>a:hover {
+    background: yellow;
+    color:black;
+}
+/* リストに「▶」を付ける*/
+.navi-menubox li>a.label:after {
+    position: absolute;
+    right: 0px;
+    margin-top: 1rem;
+    border: 6px solid transparent;
+    border-left: 6px solid gray;
+    content: "";
+    transform: translateY(-50%);
+}
+/*==============================================================================
+    ポップアップナビメニュー
+*/
+.navi-checklist {
+    z-index: 90001;
+    position:fixed;
+    display:none;
+	font-size:10pt;
+	background-color:white;
+	box-shadow: 2px 2px 4px gray;
+	border:2px solid black;
+	border-radius:5px;
+	background-color: #f5fbfe;
+}
+/* メッセージタグ */
+.navi-checklist>p {
+	margin:5px 10px;
+}
+.navi-checklist li {
+	list-style-type: none;
+	white-space: nowrap;
+}
+/* checklist tabset */
+.navi-checklist .tabmenu {
+	display:flex;
+	list-style:none;
+	width:100%;
+	border-radius:5px 5px 0 0;
+	overflow:hidden;
+}
+.navi-checklist .tabmenu>li {
+	width:100%;
+	padding:2px 20px;
+	cursor: pointer;
+	color: gray;
+	background-color: silver;
+	white-space: nowrap;
+	text-align: center;
+	border-left: 1px dotted gray;
+	border-right: 1px dotted gray;
+}
+.navi-checklist .tabmenu>li.selected {
+	color: black;
+	font-weight: bold;
+	background-color: whitesmoke;
+}
+.navi-checklist .tabcontents>li {
+	display:none;
+}
+.navi-checklist .tabcontents>li.selected {
+	display:block;
+}
+.navi-checklist .check-all {
+	padding:5px 10px;
+	border-top:1px dashed gray;
+	text-align:right;
+}
+/* 段組みは flex を使って独自に行う */
+.navi-checklist .check-itemset {
+	display: flex;
+}
+.navi-checklist .check-itemset > div {
+	margin: 5px 10px;
+}
+.navi-checklist .check-itemset > p {
+	margin: 5px 10px;
+	white-space: nowrap;
+}
+.navi-checklist .v-splitter {
+	width:1px;
+	border-left: 1px dotted silver;
+	height: calc(100% - 10);
+	margin: 5px 0;
+}
+/* (X)と▼付きのドロップダウンメニューのコンテナ */
+.dropdown-menu {
+	display:inline-flex;
+	color: silver;
+	background-color: #e9f4fb;
+	white-space: nowrap;
+	align-items: center;
+    vertical-align: middle;
+	/* border: 1px solid skyblue; */
+	padding:0;
+	font-size:10pt;
+}
+/* 他要素内にターゲットがあるときのメニュータイトル */
+.dropdown-menu.normal{
+	width: 100%;
+	color: inherit;
+	background-color: inherit;
+	/* border: none; */
+}
+/* リストに「▼」を付ける */
+.dropdown-menu>span.arrow {
+	position:relative;
+	display: inline-block;
+	right:0;
+	width: 0;
+	height: 0;
+	margin-top: 2px;
+	cursor: pointer;
+	border: 6px solid transparent;
+	border-top: 12px solid #aaa;
+	border-bottom:none;
+}
+/* シルバー背景でも見えるようにする */
+.dropdown-menu.normal>span.arrow {
+	border-top-color: #888;
+}
+.dropdown-menu>span.arrow:hover {
+	border-top-color: #333;
+}
+/* リストに「X」を付ける */
+.dropdown-menu>span.clear {
+	position:relative;
+	display: inline-block;
+	right:0;
+    cursor: pointer;
+	width:19px;
+	height:15px;
+	margin-top:2px;
+	background: url(res/img/clear_btn.png) no-repeat left top;
+	border-right: 1px dotted gray;
+}
+.dropdown-menu>span.clear:hover {
+	background: url(res/img/clear_btn.png) no-repeat left -15px;
+}
+/* IEの [X] アイコンを消す */
+.dropdown-menu>input::-ms-clear { visibility:hidden; }
+/* テキストとチェックボックスの位置揃え */
+.dropdown-menu>textarea,
+.dropdown-menu>input {
+	margin:0;
+	padding: 0 5px;
+	width:100%;
+	height:100%;
+	background-color: #e9f4fb;
+	border: none;
+	vertical-align:middle;
+}
+/* タイトル用 */
+.dropdown-menu>div{
+	padding: 0 5px;
+	width:100%;
+	height:100%;
+	border: none;
+	vertical-align:middle;
 }
