--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -568,6 +568,12 @@ opacity: 0.25; */
 	padding:0;
 	font-size:10pt;
 }
+.drop-right {
+	position: absolute;
+	right: 0;
+	color: black;
+	background-color: inherit;
+}
 /* 他要素内にターゲットがあるときのメニュータイトル */
 .dropdown-menu.normal{
 	width: 100%;
