--- a/Core/Template/res/css/tabset.css
+++ b/Core/Template/res/css/tabset.css
@@ -3,6 +3,7 @@
 .tabControll {
     width:100%;
     padding:0;
+	margin-top: 2px;
 /*
     background-color:whitesmoke;
     border-bottom: 1px dotted gray;
