--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -97,12 +97,17 @@ ul.input-list>li {
 	margin: 0 5px;
 	display: inline;
 }
-ul.input-list>li>label {
+/* ul.input-list>li>label {
 	margin: 0 2px;
-}
+} */
 /* チェックボックスの位置揃え */
-ul.input-list>li>label>input {
+/* ul.input-list>li>label>input {
 	vertical-align: middle;
+} */
+input[type="checkbox"],
+input[type="radio"] {
+	vertical-align: middle;
+	margin-right: 4px;
 }
 /* 縦並び指定ブロック内 */
 .vertical>ul.input-list>li {
