--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -25,11 +25,15 @@ opacity: 0.25; */
     display:none;
     padding: 10px;
 	margin:0;
+    max-width:735px;
     font-size:10pt;
     border: 2px solid #999;
     border-radius:12px;
     color:#333;
     background: lightyellow;
+}
+.popup-balloon * {
+    overflow: hidden;
 }
 /*    マルチタイプポップアップ吹き出し */
 .multi-balloon {
