--- a/Core/Template/res/css/markdown.css
+++ b/Core/Template/res/css/markdown.css
@@ -13,19 +13,19 @@
 */
 .easy_markdown pre {
 	width:100%;
-	margin-left:20px;
-	padding:5px 50px;	/* 上下 左右 */
-	line-height:1.4em;
+	/* margin-left:20px;
+	padding:5px 50px; */
+	/* line-height:1.4em; */
 	overflow:hidden;
 }
 /* code writing */
 .easy_markdown pre.code {
 	line-height:1.2em;
-	width:100%;
 	margin-left:25px;
-	padding-left:30px;	/* 上下 左右 */
+	padding-left:20px;
 	color:white;
 	background-color: #333;
+	overflow:auto;
 }
 .easy_markdown pre.code a:visited {color:orange;}
 .easy_markdown pre.code a:link {color:skyblue;}
