--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -69,6 +69,34 @@ a.nounder {
 option.disable {
 	color:silver;
 }
+/* フォーム部品 */
+.set-modified .modified,
+.set-modified .changed {
+	background-color: #ffdfef !important;
+}
+.set-modified input,
+.set-modified textarea,
+.set-modified select {
+	background-color: lightcyan;
+	border: 1px solid #7f9db9; /* 枠線は淡い青色 */
+	padding:2px 4px;
+}
+.set-modified table input,
+.set-modified table textarea,
+.set-modified table select {
+	border:none !important;
+}
+.set-modified .fullsize {
+	width:100%;
+	height:100%;
+	border:none !important;
+}
+.set-modified td {
+	padding:0 !important;
+}
+.set-modified th {
+	padding:0 5px !important;
+}
 /* コンボボックススタイル */
 .combobox  {
 	height:1.75em;
