--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -333,8 +333,6 @@ opacity: 0.25; */
     z-index:90002;
     position:fixed;
     display:none;
-    min-width:200px;
-    min-height:150px;
     font-size:10pt;
     color:black;
     border: 1px solid black;
@@ -358,13 +356,18 @@ opacity: 0.25; */
     line-height:25px;
     text-indent:0.5em;
     font-weight:bold;
-    padding:0 8px 4px 22px;
+    padding:0 8px 4px 26px;
     color:black;
-    background: url(res/img/confirm.png) no-repeat left top;
-/*
-    color:white;
-    background-color: linear-gradient(-90deg,#ccc,#aaa,#000);
-*/
+	border:1px solid #697B95;
+	border-bottom: 1px solid gray;
+}
+.dialog-box dl dt.alert {
+    background: url(res/img/alert.png) no-repeat 4px top;
+	background-color:#FED800;
+}
+.dialog-box dl dt.confirm {
+    background: url(res/img/confirm.png) no-repeat 4px top;
+	background-color:#A4BEE4; /* #D9B526 */
 }
 .dialog-box .dialog-msg {
     position:relative;
@@ -373,14 +376,11 @@ opacity: 0.25; */
     padding:10px 20px;
 }
 .dialog-box .buttonList {
-    position:absolute;
     width:100%;
-    height:1.2em;
-    bottom:1.0em;
     text-align: center;
-    padding: 15px 5px;
-    margin:auto;
-/*    background-color: #f1f1f1;*/
+    margin:1em 0;
+	padding-top:1em;
+	border-top: 1px solid silver;
 }
 /* 実行ボタン */
 .dialog-box .buttonList .okButton,
