--- a/Core/Template/res/css/floatwin.css
+++ b/Core/Template/res/css/floatwin.css
@@ -20,6 +20,7 @@
     -ms-user-select: none;
 }
 .floatWindow dl {
+	margin: 0;
     width:100%;
     height:calc(100% - 11px);   /* リサイズアイコン:11px */
 }
