プレーンメニューのサポート

--- a/Core/Template/res/css/popup.css
+++ b/Core/Template/res/css/popup.css
@@ -568,7 +568,7 @@ opacity: 0.25; */
 	margin: 5px 0;
 }
 /* タイトルブロックメニュー */
-.navi-checklist .title-menu {
+.navi-checklist .plane-menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -577,36 +577,36 @@ opacity: 0.25; */
   margin:0 !important;
 }
 /* 横並びタイトルチェックリスト */
-.navi-checklist .title-menu dl {
+.navi-checklist .plane-menu dl {
 	width:100%;
 	margin: 0;
 	padding: 0;
 }
-.navi-checklist .title-menu dl:nth-child(even) {
+.navi-checklist .plane-menu dl:nth-child(even) {
 	border-left:1px solid black;
 }
 /* タイトルスタイル */
-.navi-checklist .title-menu dt {
+.navi-checklist .plane-menu dt {
 	border-radius:5px 5px 0 0;
 	text-align:center;
 	border-bottom:1px solid gray;
 	background-color:silver;
 }
 /* チェックリストコンテナ */
-.navi-checklist .title-menu dd {
+.navi-checklist .plane-menu dd {
 	padding:5px;
 	margin: 0;
 }
 /* チェックリスト表示 */
-.navi-checklist .title-menu ul.input-list>li {
+.navi-checklist .plane-menu ul.input-list>li {
 	display:block;
 }
 /* カラム段組み */
-.navi-checklist .title-menu .columns2 {columns:2;}
-.navi-checklist .title-menu .columns3 {columns:3;}
-.navi-checklist .title-menu .columns4 {columns:4;}
-.navi-checklist .title-menu .columns5 {columns:5;}
-.navi-checklist .title-menu .columns6 {columns:6;}
+.navi-checklist .plane-menu .columns2 {columns:2;}
+.navi-checklist .plane-menu .columns3 {columns:3;}
+.navi-checklist .plane-menu .columns4 {columns:4;}
+.navi-checklist .plane-menu .columns5 {columns:5;}
+.navi-checklist .plane-menu .columns6 {columns:6;}
 
 /* (X)と▼付きのドロップダウンメニューのコンテナ */
 .dropdown-menu {
