--- a/Core/Template/res/css/debugbar.css
+++ b/Core/Template/res/css/debugbar.css
@@ -12,6 +12,7 @@
     border-bottom-left-radius: 10px;
     box-shadow: 1px 1px 2px black;
     display:none;
+	text-align: left;
 }
 /* メニュー表示 */
 .debugtab ul#debugMenu {
