--- a/Core/Template/res/css/debugbar.css
+++ b/Core/Template/res/css/debugbar.css
@@ -66,6 +66,9 @@
     color:#000;
     font-size:10pt;
 }
+.debug_srcollbox pre {
+    margin:0;
+}
 .debug_msg_box {
     width:800px;
     word-wrap: break-word;
